# chat-docs-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  MANUAL_TEST_SCENARIOS.md  README.md  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  debug_status.py  models.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: rate_limiter.py
backend/app/api/routes/: chat.py  conversations.py  documents.py  providers.py
backend/app/api/schemas/: chat.py  conversation.py  document.py  providers.py
backend/app/application/services/: agent_service.py  chat_service.py  chunking_service.py  conversation_service.py  document_service.py  guardrails.py  (+1 more)
backend/app/core/: config.py  dependencies.py  logging.py  metrics.py
backend/app/domain/: value_objects.py
backend/app/tasks/: process_document.py
backend/mcp_server/: dependencies.py  server.py
backend/migrations/: env.py
backend/migrations/versions/: 6259d880cc3c_add_foreign_key_to_chunks.py  c0534b24f46f_initial_migration.py
backend/scripts/: entrypoint.sh  seed_documents.json  seed_documents.py
backend/tests/: conftest.py
backend/tests/evals/: agent_eval_dataset.jsonl  agent_evaluator.py  base_evaluator.py  faithfulness.py  relevance.py  test_agent_evals.py  test_faithfulness.py  test_rag_quality.py  test_relevance.py  test_retrieval.py
backend/tests/fixtures/: fakes.py
backend/tests/integration/: test_chat.py  test_end_to_end.py  test_health.py  test_hybrid_search_engine.py  test_mcp_server.py  test_postgres_repositories.py  test_providers.py  test_reprocess_document.py
backend/tests/unit/: test_agent_service.py  test_api_routes.py  test_chat_service.py  test_chunking_service.py  test_config.py  test_document_parser.py  test_document_service.py  test_gemini_provider.py  test_guardrails.py  test_ingestion_service.py  test_local_file_storage.py  test_logging.py  test_model_catalog.py  test_process_document_task.py  test_provider_errors.py  test_providers_endpoint.py  test_rate_limiter.py  test_resilient_providers.py  test_schemas.py
(+103 files in other folders)
