[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-document-agent"
version = "0.1.0"
description = "Clinical & Regulatory Document Intelligence Agent"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",

    # Async workers
    "celery>=5.4.0",
    "redis>=5.0.0",

    # LLM providers
    "openai>=1.35.0",
    "google-genai>=1.0.0",

    # Embeddings (open-source alternative)
    "sentence-transformers>=3.0.0",

    # Document parsing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",

    # MCP
    "fastmcp>=0.4.0",

    # Observability
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"
markers = [
    "llm: marks tests that require a live LLM API key",
]
